--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-native-vector-icons": "^6.4.14",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-animated-spinkit": "^1.5.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-vector-icons": "^10.0.0",
