--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@tanstack/react-query": "^4.33.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "react": "18.2.0",
     "react-native": "0.72.4",
