--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^4.33.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "axios": "^1.5.0",
+    "javascript-time-ago": "^2.5.9",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-animated-spinkit": "^1.5.2",
