--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@tanstack/react-query": "^4.33.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "axios": "^1.5.0",
@@ -21,6 +22,7 @@
     "react-native": "0.72.4",
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-country-flag": "^1.1.9",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-vector-icons": "^10.0.0",
