--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animated-spinkit": "^1.5.2",
     "react-native-country-flag": "^1.1.9",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-vector-icons": "^10.0.0",
